templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pam-keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: keycloak
