templates/keycloak-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
spec:
  parentRefs:
  - name: pam-gateway
    namespace: pam
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /keycloak
    backendRefs:
    - name: pam-keycloak
      port: 8090
