templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-allow-envoy
  namespace: pam
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
      ports:
        - protocol: TCP
          port: 8090
    
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: core-chart
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pam

      ports:
        - protocol: TCP
          port: 8090
    
    - ports:
        - protocol: TCP
          port: 9000
